GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/Metafour_Bike_Availability_Logs__c.object-meta.xml
<CustomObject>
    <label>Metafour_Bike Availability Logs</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Metafour_Bike Availability Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metafour_Bike Availability Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>