GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/Available_Space_EL_Over85__c.field-meta.xml
<CustomField>
    <fullName>Available_Space_EL_Over85__c</fullName>
    <description>for Metafour Luggage Booking</description>
    <formula>IF( AND( Total_Available_Luggage_space__c  &lt; 2,  Total_Space_EL_Over85__c - (  Booked_Space_EL_Over85__c  +  Unconfirmed_Space_EL_Over85__c ) &gt;0 ) , Total_Available_Luggage_space__c   , Total_Space_EL_Over85__c  - ( Booked_Space_EL_Over85__c + Unconfirmed_Space_EL_Over85__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Space EL Over85</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>