GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/Available_Space_EL_Under85__c.field-meta.xml
<CustomField>
    <fullName>Available_Space_EL_Under85__c</fullName>
    <description>for Metafour Luggage Booking</description>
    <formula>IF(  Total_Space_EL_Under85__c = 0 , 0 , Total_Space_EL_Under85__c  - (  Booked_Space_EL_Under85__c +  Unconfirmed_Space_EL_Under85__c  +  Booked_Space_EL_Over85__c +  Unconfirmed_Space_EL_Over85__c  + 3 * Booked_Space_VIP_Booking__c + 3 * Unconfirmed_Space_VIP_Booking__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Space EL Under85</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>