GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/Available_Space_VIP_Booking__c.field-meta.xml
<CustomField>
    <fullName>Available_Space_VIP_Booking__c</fullName>
    <formula>IF( Total_Available_Luggage_space__c &lt; 3 , 0 , Total_Space_VIP_Booking__c  - (  Booked_Space_VIP_Booking__c +   Unconfirmed_Space_VIP_Booking__c )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Space VIP Booking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>