GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/Booked_Space_VIP_Booking__c.field-meta.xml
<CustomField>
    <fullName>Booked_Space_VIP_Booking__c</fullName>
    <description>for Metafour Luggage Booking</description>
    <label>Booked Space VIP Booking</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>