GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/From_Station__c.field-meta.xml
<CustomField>
    <fullName>From_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Station</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Metafour_Bike Availability Logs</relationshipLabel>
    <relationshipName>Metafour_Bike_Availability_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>