GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/No_of_group_bookings__c.field-meta.xml
<CustomField>
    <fullName>No_of_group_bookings__c</fullName>
    <defaultValue>0</defaultValue>
    <description>for Metafour Luggage Booking</description>
    <label>No of group bookings</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>