GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/selectedAssembled__c.field-meta.xml
<CustomField>
    <fullName>selectedAssembled__c</fullName>
    <label>selectedAssembled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>