GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/selectedELUnder85__c.field-meta.xml
<CustomField>
    <fullName>selectedELUnder85__c</fullName>
    <description>for Metafour Luggage Booking</description>
    <label>selectedELUnder85</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>