GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/selectedGroupLuggage__c.field-meta.xml
<CustomField>
    <fullName>selectedGroupLuggage__c</fullName>
    <description>for Metafour Luggage Booking</description>
    <label>selectedGroupLuggage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>