GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/Total_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Available__c</fullName>
    <formula>MAX(Total_Assembled_Tickets__c,Total_Boxed_Tickets__c)  - (Unconfirmed_Assembled_Tickets__c +  Booked_Assembled_Tickets__c + Unconfirmed_Boxed_Tickets__c + Booked_Boxed_Tickets__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>