GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/Total_Available_Luggage_space__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Luggage_space__c</fullName>
    <description>for Metafour Luggage Booking</description>
    <formula>MAX(Total_Space_EL_Over85__c  , Total_Space_EL_Under85__c ) - ( Unconfirmed_Space_EL_Over85__c  +  Booked_Space_EL_Over85__c  +  Unconfirmed_Space_EL_Under85__c  +  Booked_Space_EL_Under85__c + (3 * Booked_Space_VIP_Booking__c) + (3 * Unconfirmed_Space_VIP_Booking__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Available Luggage space</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>