GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/Total_Boxed_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Total_Boxed_Tickets__c</fullName>
    <label>Total Boxed Space</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>