GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/Total_Space_EL_Under85__c.field-meta.xml
<CustomField>
    <fullName>Total_Space_EL_Under85__c</fullName>
    <description>for Metafour Luggage Booking</description>
    <label>Total Space EL Under85</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>