GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/Train_Id__c.field-meta.xml
<CustomField>
    <fullName>Train_Id__c</fullName>
    <formula>Train_Number__c &amp;&quot; &quot;&amp;  TEXT( Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Train Id</label>
    <type>Text</type>
</CustomField>