GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/Unconfirmed_Assembled_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Unconfirmed_Assembled_Tickets__c</fullName>
    <label>Unconfirmed Assembled Space</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>