GearsetPOC/force-app/main/default/objects/Metafour_Bike_Availability_Logs__c/fields/Unconfirmed_Space_EL_Over85__c.field-meta.xml
<CustomField>
    <fullName>Unconfirmed_Space_EL_Over85__c</fullName>
    <description>for Metafour Luggage Booking</description>
    <label>Unconfirmed Space EL Over85</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>